# SUPERAI

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
app/agent/: __init__.py  graph.py  state.py
app/agent/memory/: __init__.py  redis_memory.py
app/agent/nodes/: __init__.py  executors.py  generator.py  intent.py  router.py
app/agent/prompts/: __init__.py  intent.py
app/api/: __init__.py  deps.py  response.py
app/api/routes/: __init__.py  auth.py  chat.py  metrics.py  stream.py  (+1 more)
app/auth/: __init__.py  dependencies.py  schemas.py  service.py
app/config/: __init__.py  settings.py
app/data/: exercises.json
app/db/: __init__.py  database.py  models.py
app/llm/: __init__.py  cache.py  exceptions.py  qwen.py
app/mcp/: __init__.py  client.py  server.py  tools.py
app/rag/: __init__.py  embeddings.py  indexer.py  loader.py
app/services/: __init__.py
app/tools/: __init__.py  base.py  fitness.py  registry.py  training_plan.py
app/utils/: __init__.py  cache.py  exceptions.py  logger.py  metrics.py  rate_limiter.py
data/chroma/: chroma.sqlite3
deploy/: prometheus.yml
docs/: DEPLOYMENT.md
knowledge_base/: beginner_guide.md  bench_press.md  bmi_explanation.md  bmr_explanation.md  cardio_guide.md  deep_squat.md  exercise_deadlift.md  exercise_plank.md  exercise_pullup.md  fat_loss_basics.md  knee_health.md  muscle_gain_basics.md  nutrition_carbs.md  nutrition_protein.md  progressive_overload.md  recovery_guide.md  shoulder_health.md  supplement_basics.md  warmup_guide.md  workout_frequency.md
scripts/: load_knowledge.py
tests/: conftest.py  test_agent_state.py  test_auth.py  test_graph.py  test_intent.py  test_llm.py  test_mcp.py  test_rag.py  test_redis.py  test_router.py  test_tools.py  test_training_plan.py
tests/e2e/: test_e2e.py
tests/fixtures/: intent_test_cases.yaml
tests/integration/: test_integration.py
tests/unit/: test_api.py  test_database.py  test_llm_unit.py  test_utils.py
(+2 files in other folders)
